added valorant project

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <main>
         <h1>welcome to my website boss</h1>  
+        <div><a href="projects/valorant-ascii/">Valorant Chat ASCII Maker</a></div>
     </main>
     <script src="index.js"></script>
   </body>
