added button for valentines

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <body>
     <main>
         <h1>welcome to my website boss</h1>  
-        <div><a href="projects/valorant-ascii/">Valorant Chat ASCII Maker</a></div>
+        <div>
+          <a href="projects/valorant-ascii/">Valorant Chat ASCII Maker</a>
+          <a href="projects/valentines2024/">Valentines 2024</a>
+        </div>
     </main>
     <script src="index.js"></script>
   </body>
