updated html title

--- a/projects/valorant-ascii/index.html
+++ b/projects/valorant-ascii/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sandbox</title>
+    <title>Valorant ASCII Tool</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="src/styles.css" />
   </head>
