file restructure and new links

--- a/projects/valorant-ascii/index.html
+++ b/projects/valorant-ascii/index.html
@@ -9,6 +9,8 @@
   <body>
     <h1 id="title">Valorant ASCII Tool</h1>
 
+    <h2>Important Note: In one of the patches early 2025, a lot of the game's UI (such as font spacing and line wrapping). ASCII art no longer works.</h2>
+
     <div class="slidecontainer">
       <input type="range" min="1" max="12" value="12" class="slider" id="canvas-height">
     </div>
