moved index.html
I think github.io pages need the index.html in the main folder

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       </div>
       <h2>email: {not ready}</h2>
       <div class="contact">
-        <a href="https://github.com/oralei" target="_blank" rel="noopener noreferrer"><img class="image" src="../images/github.png" alt="github"></a>
-        <a href="https://www.linkedin.com/in/mark-justin-luansing-3b68912b1/" target="_blank" rel="noopener noreferrer"><img class="image" src="../images/linkedin.png" alt="linkedin"></a>
+        <a href="https://github.com/oralei" target="_blank" rel="noopener noreferrer"><img class="image" src="images/github.png" alt="github"></a>
+        <a href="https://www.linkedin.com/in/mark-justin-luansing-3b68912b1/" target="_blank" rel="noopener noreferrer"><img class="image" src="images/linkedin.png" alt="linkedin"></a>
       </div>
       <div class="nav-bar">
         <a href="index.html" class="bar-element1">home</a>
